[package]
name = "savm"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "^0.8"
dashmap = "^6"

tokio = { version = "^1", features = ["rt", "rt-multi-thread", "sync", "time"] }

pastey = "^0.2"
cranelift = { version = "^0.126", features = ["jit", "module", "native"] }

sart = { path = "../sart" }
